# scoutingpass-client

./: Dockerfile  build.sh  deploy.sh  docker-run.sh  keystore.jks
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
ui/: TBAInterface.patch.js  index.html  main.js  qr-codes.html  qr-codes.js
