[package]
name = "scout"
version = "0.1.0"
description = "Client app for our scouting software"
authors = ["Team 900 Programmers"]
license = ""
repository = "https://github.com/frc900/scout"
edition = "2021"
rust-version = "1.70"

[lib]
name = "scoutlib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
scraper = "0.18.1"
jni = "0.21.1"
bytes = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
tauri = { git = "https://github.com/bright-shard/tauri-patch", branch = "dev" }
wry = { git = "https://github.com/bright-shard/wry-patch", branch = "dev" }
